# pytest-cdist

./: LICENCE  README.md  pyproject.toml
.github/workflows/: test.yaml
pytest_cdist/: check.py  plugin.py
tests/: test_check.py  test_plugin.py
