[project]
name = "pytest-cdist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pytest>=7",
]

[dependency-groups]
dev = [
    "ruff>=0.8.4",
    "pytest-xdist>=3.6.1",
    "mypy>=1.14.0",
    "pre-commit>=4.0.1",
]

[project.entry-points.pytest11]
pytest_cdist = "pytest_cdist.plugin"

[project.scripts]
pytest-cdist-check = "pytest_cdist.check:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.mypy]
strict = true
packages = ["pytest_cdist", "tests"]

[tool.ruff]
target-version = "py39"
